--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <header>My Game Portfolio</header>
+    <div class="container">
+        <div class="game-grid">
+            <div class="game">Game 1</div>
+            <div class="game">Game 2</div>
+            <div class="game">Game 3</div>
+            <div class="game">Game 4</div>
+        </div>
+        <div class="sidebar">
+            <img src="profile.jpg" alt="Profile Picture">
+            <h3>About Me</h3>
+            <p>Short description about yourself.</p>
+        </div>
+
+    </div>
 </body>
 </html>
