--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="game">Game 4</div>
         </div>
         <div class="sidebar">
-            <img src="profile.jpg" alt="Profile Picture">
+            <img src="image.png" alt="Profile Picture">
             <h3>About Me</h3>
-            <p>Short description about yourself.</p>
+            <p>very cool guy</p>
         </div>
 
     </div>
