updated layout, added new snapshot page.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
 
 
 <body>
-    <header>My Game Portfolio</header>
+    <header>
+        <div class="header-container">
+            <a href="index.html" class="home-button">Home</a>
+
+            <span>Gvidas Danielius</span>
+        </div>
+    </header>
     <div class="container">
         <div class="game-grid">
-            <div class="game">Game 1</div>
+
+            <a class="game" href="snapshot.html" style="background-image: url('images/snapshot.png');">
+                <p>Godot</p>
+                <h1>Snapshot </h1>
+                <p>Designed in a team of three for a two-week game jam.</p>
+            </a>
+
             <div class="game">Game 2</div>
             <div class="game">Game 3</div>
             <div class="game">Game 4</div>
+            <div class="game">Game 5</div>
+            <div class="game">Game 6</div>
         </div>
         <div class="sidebar">
             <img src="image.png" alt="Profile Picture">
