replaced background image with image element

--- a/index.html
+++ b/index.html
@@ -19,13 +19,20 @@
     <div class="container">
         <div class="game-grid">
 
-            <a class="game" href="snapshot.html" style="background-image: url('images/snapshot.png');">
+            <a class="game" href="pages/snapshot.html">
+                <img src="images/snapshot.png">
+
                 <p>Godot</p>
                 <h1>Snapshot </h1>
                 <p>Designed in a team of three for a two-week game jam.</p>
             </a>
 
-            <div class="game">Game 2</div>
+            <a class="game" href="snapshot.html">
+                <img src="images/diss.png">
+                <p>Unity C#</p>
+                <h1>Undergraduate Dissertation </h1>
+                <p>I Love Programming</p>
+            </a>
             <div class="game">Game 3</div>
             <div class="game">Game 4</div>
             <div class="game">Game 5</div>
