filled diss page

--- a/pages/diss.html
+++ b/pages/diss.html
@@ -18,23 +18,27 @@
 
     <div class="page-container">
         <div class="text-column">
-            <h2>Snapshot</h2>
+            <h2>Developing Algorithms for Crack-Free Rendering of a Quad-Tree LOD Algorithm</h2>
             <p>
-                This game was made in a team of three people for the
-                <a href="https://itch.io/jam/game-dev-winter-jam-25"> NUGDS Winter Jam 2025 </a>
+                For my BSc degree, I chose to create a project that approaches the problem of T-Junctions along
+                borders of mesh chunks which would create cracks within the terrain that allowed a player to see through.
             </p>
-
-            <video width="640" controls>
-                <source src="../videos/CSC8302.mp4" type="video/mp4">
-            </video>
+            <br>
+            <p>The project targetted three different algorithms to address this problem:</p>
+            <p>- Generate a boundary around the chunk pointing downwards.</p>
+            <p>- Generate this boundary but point it outwards.</p>
+            <p>- Move individual vertices up or down to match the neighbouring node height.</p>
+            <br>
+            <p>The project involved learning skills such as Terrain generation, </p>
+           
 
         </div>
 
         <div class="screenshot-column">
-            <img src="../images/snapshotLobby.png" alt="Screenshot">
-            <img src="../images/snapshotFlash.png" alt="Screenshot">
-            <img src="../images/snapshotCamera.png" alt="Screenshot">
-            <img src="../images/snapshotWindow.png" alt="Screenshot">
+            <img src="../gifs/dissanim.gif" alt="Screenshot">
+            <img src="../images/dissclose.png" alt="Screenshot">
+            <img src="../images/dissalgo3.png" alt="Screenshot">
+            <img src="../images/dissalgo1.png" alt="Screenshot">
 
 
         </div>
