--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <div class="container">
         <div class="game-grid">
 
+            <a class="game" href="pages/diss.html">
+                <img src="images/diss.png">
+                <p>Unity C#</p>
+                <h1>Undergraduate Dissertation </h1>
+                <p>I Love Programming</p>
+            </a>
+
             <a class="game" href="pages/snapshot.html">
                 <img src="images/snapshot.png">
 
@@ -27,12 +34,7 @@
                 <p>Designed in a team of three for a two-week game jam.</p>
             </a>
 
-            <a class="game" href="snapshot.html">
-                <img src="images/diss.png">
-                <p>Unity C#</p>
-                <h1>Undergraduate Dissertation </h1>
-                <p>I Love Programming</p>
-            </a>
+
             <div class="game">Game 3</div>
             <div class="game">Game 4</div>
             <div class="game">Game 5</div>
