improved diss page, and better icon transitions

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     </header>
     <div class="container">
         <div class="game-grid">
-
+            <h1>Highlighted Projects</h1>
             <a class="game" href="pages/diss.html">
                 <img src="images/diss.png">
                 <p>Unity C#</p>
                 <h1>Undergraduate Dissertation </h1>
-                <p>I Love Programming</p>
+                <p>Terrain generation and Level of Detail implementation</p>
             </a>
 
             <a class="game" href="pages/snapshot.html">
@@ -31,14 +31,17 @@
 
                 <p>Godot</p>
                 <h1>Snapshot </h1>
-                <p>Designed in a team of three for a two-week game jam.</p>
+                <p>3-person personal team project for a game jam.</p>
             </a>
 
 
-            <div class="game">Game 3</div>
-            <div class="game">Game 4</div>
-            <div class="game">Game 5</div>
-            <div class="game">Game 6</div>
+            <div class="game">unity inventory system + dungeon generator</div>
+
+            <h1>Coursework Projects</h1>
+            <div class="game">Game of Life</div>
+            <div class="game">Graphics Project</div>
+            <div class="game">Game Project</div>
+            <h1>Personal Projects</h1>
         </div>
         <div class="sidebar">
             <img src="image.png" alt="Profile Picture">
