--- a/pages/diss.html
+++ b/pages/diss.html
@@ -12,16 +12,20 @@
     <header>
         <div class="header-container">
             <a href="../index.html" class="home-button">Home</a>
-            <span>Snapshot</span>
+            <span>Undergraduate Dissertation</span>
         </div>
     </header>
 
     <div class="page-container">
         <div class="text-column">
             <h2>Developing Algorithms for Crack-Free Rendering of a Quad-Tree LOD Algorithm</h2>
+            <br>
             <p>
-                For my BSc degree, I chose to create a project that approaches the problem of T-Junctions along
-                borders of mesh chunks which would create cracks within the terrain that allowed a player to see through.
+                For my BSc degree, I chose to create a project that
+                approaches the problem of T-Junctions along
+                borders of mesh chunks which would create cracks
+                within the terrain that allowed a player to see through.
+                
             </p>
             <br>
             <p>The project targetted three different algorithms to address this problem:</p>
@@ -29,7 +33,8 @@
             <p>- Generate this boundary but point it outwards.</p>
             <p>- Move individual vertices up or down to match the neighbouring node height.</p>
             <br>
-            <p>The project involved learning skills such as Terrain generation, </p>
+            <p>The project involved learning skills such as Terrain and Mesh generation, implementing and manipulating Quad-Trees
+            and evaluating algorithms effectively.</p>
            
 
         </div>
