--- a/index.html
+++ b/index.html
@@ -18,33 +18,69 @@
     </header>
     <div class="container">
         <div class="game-grid">
+
             <h1>Highlighted Projects</h1>
-            <a class="game" href="pages/diss.html">
-                <img src="images/diss.png">
-                <p>Unity C#</p>
-                <h1>Undergraduate Dissertation </h1>
-                <p>Terrain generation and Level of Detail implementation</p>
-            </a>
+            <div class="game-row">
+                <a class="game" href="">
+                    <img src="images/dungeon.png">
+                    <p>Unity C#</p>
+                    <h1>Roguelike Game </h1>
+                    <p>Procedural Dungeons and Inventory System</p>
+                </a>
+                <a class="game" href="pages/diss.html">
+                    <img src="images/diss.png">
+                    <p>Unity C#</p>
+                    <h1>Undergraduate Dissertation </h1>
+                    <p>Terrain generation and Level of Detail implementation</p>
+                </a>
+                <a class="game" href="pages/snapshot.html">
+                    <img src="images/snapshot.png">
 
-            <a class="game" href="pages/snapshot.html">
-                <img src="images/snapshot.png">
+                    <p>Godot</p>
+                    <h1>Snapshot </h1>
+                    <p>3-person personal team project for a game jam.</p>
+                </a>
+            </div>
 
-                <p>Godot</p>
-                <h1>Snapshot </h1>
-                <p>3-person personal team project for a game jam.</p>
-            </a>
-
-
-            <div class="game">unity inventory system + dungeon generator</div>
 
             <h1>Coursework Projects</h1>
-            <div class="game">Game of Life</div>
-            <div class="game">Graphics Project</div>
-            <div class="game">Game Project</div>
+            <div class="game-row">
+                <a class="game" href="">
+                    <img src="images/gol.png">
+                    <p>C++</p>
+                    <h1>Game of Life </h1>
+                    <p>Simulation of Conway's Game of Life, with pattern recognition</p>
+                </a>
+                <a class="game" href="">
+                    <img src="images/graphics.png">
+                    <p>C++ & OpenGL</p>
+                    <h1>Advanced Graphics</h1>
+                    <p>3D graphics rendering, including post-processing and real-time shadows</p>
+                </a>
+                <a class="game" href="">
+                    <img src="images/physics.png">
+                    <p>C++ & OpenGL</p>
+                    <h1>Advanced Games</h1>
+                    <p>Engine programming, including physics, AI, networking and state-machines</p>
+                </a>
+            </div>
+
+
             <h1>Personal Projects</h1>
+
+            <div class="game-row">
+                <a class="game" href="">
+                    <img src="images/gol.png">
+                    <p>C++</p>
+                    <h1>Game of Life </h1>
+                    <p>Simulation of Conway's Game of Life, with pattern recognition</p>
+                </a>
+                
+            </div>
+
         </div>
         <div class="sidebar">
-            <img src="image.png" alt="Profile Picture">
+            <img src="images/pfp.png" alt="Profile Picture">
             <h3>About Me</h3>
             <p>very cool guy</p>
         </div>
