created new pages for each game, updated about me

--- a/index.html
+++ b/index.html
@@ -19,20 +19,49 @@
     <div class="container">
         <div class="game-grid">
 
-            <h1>Highlighted Projects</h1>
+
+            <h1>Coursework Projects</h1>
             <div class="game-row">
-                <a class="game" href="">
-                    <img src="images/dungeon.png">
-                    <p>Unity C#</p>
-                    <h1>Roguelike Game </h1>
-                    <p>Procedural Dungeons and Inventory System</p>
-                </a>
+
                 <a class="game" href="pages/diss.html">
                     <img src="images/diss.png">
                     <p>Unity C#</p>
                     <h1>Undergraduate Dissertation </h1>
                     <p>Terrain generation and Level of Detail implementation</p>
                 </a>
+
+                <a class="game" href="pages/gol.html">
+                    <img src="images/gol.png">
+                    <p>C++</p>
+                    <h1>Game of Life </h1>
+                    <p>Simulation of Conway's Game of Life, with pattern recognition</p>
+                </a>
+
+                <a class="game" href="pages/graphics.html">
+                    <img src="images/graphics.png">
+                    <p>C++ & OpenGL</p>
+                    <h1>Advanced Graphics</h1>
+                    <p>3D graphics rendering, including post-processing and real-time shadows</p>
+                </a>
+
+                <a class="game" href="pages/physics.html">
+                    <img src="images/physics.png">
+                    <p>C++ & OpenGL</p>
+                    <h1>Advanced Games</h1>
+                    <p>Engine programming, including physics, AI, networking and state-machines</p>
+                </a>
+
+            </div>
+            <h1>Personal Projects</h1>
+            <div class="game-row">
+
+                <a class="game" href="pages/dungeon.html">
+                    <img src="images/dungeon.png">
+                    <p>Unity C#</p>
+                    <h1>Roguelike Game </h1>
+                    <p>Procedural Dungeons and Inventory System</p>
+                </a>
+
                 <a class="game" href="pages/snapshot.html">
                     <img src="images/snapshot.png">
 
@@ -40,49 +69,24 @@
                     <h1>Snapshot </h1>
                     <p>3-person personal team project for a game jam.</p>
                 </a>
+
+                <a class="game" href="pages/uno.html">
+                    <img src="images/uno.png">
+
+                    <p>Python</p>
+                    <h1>Networked UNO Game </h1>
+                    <p>Created a four player uno game able to be
+                    played across a network using pygame and sockets</p>
+                </a>
+
             </div>
-
-
-            <h1>Coursework Projects</h1>
-            <div class="game-row">
-                <a class="game" href="">
-                    <img src="images/gol.png">
-                    <p>C++</p>
-                    <h1>Game of Life </h1>
-                    <p>Simulation of Conway's Game of Life, with pattern recognition</p>
-                </a>
-                <a class="game" href="">
-                    <img src="images/graphics.png">
-                    <p>C++ & OpenGL</p>
-                    <h1>Advanced Graphics</h1>
-                    <p>3D graphics rendering, including post-processing and real-time shadows</p>
-                </a>
-                <a class="game" href="">
-                    <img src="images/physics.png">
-                    <p>C++ & OpenGL</p>
-                    <h1>Advanced Games</h1>
-                    <p>Engine programming, including physics, AI, networking and state-machines</p>
-                </a>
-            </div>
-
-
-            <h1>Personal Projects</h1>
-
-            <div class="game-row">
-                <a class="game" href="">
-                    <img src="images/gol.png">
-                    <p>C++</p>
-                    <h1>Game of Life </h1>
-                    <p>Simulation of Conway's Game of Life, with pattern recognition</p>
-                </a>
-                
-            </div>
-
         </div>
         <div class="sidebar">
             <img src="images/pfp.png" alt="Profile Picture">
             <h3>About Me</h3>
-            <p>very cool guy</p>
+            <p>Master's student at Newcastle University, currently studying Game Engineering.</p>
+            <br>
+            <p></p>
         </div>
 
     </div>
