added new projects

--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
                     <p>Engine programming, including physics, AI, networking and state-machines</p>
                 </a>
 
+                <a class="game" href="pages/darwin.html">
+                    <img src="images/darwin.png">
+                    <p>Python</p>
+                    <h1>Evolutionary Algorithm</h1>
+                    <p>Developed an algorithm to generate a target image out of polygons.</p>
+                </a>
+
+                <a class="game" href="pages/website.html">
+                    <img src="images/website.png">
+                    <p>Python Flask + HTML/CSS</p>
+                    <h1>Group-project Webpage</h1>
+                    <p>Worked within a team of five to create a website for sustainable food practises.</p>
+                </a>
+
             </div>
             <h1>Personal Projects</h1>
             <div class="game-row">
