added download button for diss

--- a/pages/diss.html
+++ b/pages/diss.html
@@ -34,7 +34,8 @@
             <br>
             <p>The project involved learning skills such as Terrain and Mesh generation, implementing and manipulating Quad-Trees
             and evaluating algorithms effectively.</p>
-           
+            <br>
+            <a href="../documents/diss_write_up.pdf" download>diss_write_up.pdf</a>
 
         </div>
 
