--- a/pages/diss.html
+++ b/pages/diss.html
@@ -24,7 +24,7 @@
                 approaches the problem of T-Junctions along
                 borders of mesh chunks which would create cracks
                 within the terrain that allowed a player to see through.
-                
+
             </p>
             <br>
             <p>The project targetted three different algorithms to address this problem:</p>
@@ -32,10 +32,16 @@
             <p>- Generate this boundary but point it outwards.</p>
             <p>- Move individual vertices up or down to match the neighbouring node height.</p>
             <br>
-            <p>The project involved learning skills such as Terrain and Mesh generation, implementing and manipulating Quad-Trees
-            and evaluating algorithms effectively.</p>
+            <p>
+                The project involved learning skills such as Terrain and Mesh generation, implementing and manipulating Quad-Trees
+                and evaluating algorithms effectively.
+            </p>
             <br>
             <a href="../documents/diss_write_up.pdf" download>diss_write_up.pdf</a>
+            <br />
+            <a href="https://github.com/johnnileus/CSC3094-Dissertation">github repository</a>
+
+
 
         </div>
 
