--- a/pages/gol.html
+++ b/pages/gol.html
@@ -20,8 +20,12 @@
             <h2>Advanced Programming for Games</h2>
             <br>
             <p>
-
-
+                This module was a starting introduction into C++ programming. The task given was to develop
+                a simulation of Conway's Game of Life and analyse it for any emerging patterns.
+                
+            </p><br /><p>
+                The main challenge was analysing each step of the simulation for certain static and dynamic
+                patterns and keeping track of these across multiple steps.
             </p>
 
 
