completed game of life page

--- a/pages/gol.html
+++ b/pages/gol.html
@@ -22,18 +22,25 @@
             <p>
                 This module was a starting introduction into C++ programming. The task given was to develop
                 a simulation of Conway's Game of Life and analyse it for any emerging patterns.
-                
+
             </p><br /><p>
                 The main challenge was analysing each step of the simulation for certain static and dynamic
                 patterns and keeping track of these across multiple steps.
+            </p><br /><p>
+                The program is complete with a user-interface, a saving and loading system
+                and a grid that can be resized at runtime.
             </p>
 
-
+            <br />
+            <p>Source Code/Build: </p>
+            <a href="../files/game_of_life.zip" download> game_of_life.zip</a>
 
         </div>
 
         <div class="screenshot-column">
-            <img src="../images/gol.png" alt="Screenshot">
+            <img src="../gifs/golanim.gif" alt="Screenshot">
+            <img src="../images/golgrid.png" alt="Screenshot">
+            <img src="../images/golexperiments.png" alt="Screenshot">
 
 
 
