updated gol, graphics and physics pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a class="game" href="pages/physics.html">
                     <img src="images/physics.png">
                     <p>C++ & OpenGL</p>
-                    <h1>Advanced Games</h1>
+                    <h1>Small Feline, Big Deadline</h1>
                     <p>Engine programming, including physics, AI, networking and state-machines</p>
                 </a>
 
