--- a/pages/physics.html
+++ b/pages/physics.html
@@ -17,9 +17,10 @@
 
     <div class="page-container">
         <div class="text-column">
-            <h2>Advanced Game Technologies</h2>
+            <h2>Small Feline, Big Deadline</h2>
             <br>
             <p>
+                For this coursework, I developed a game in C++ that integrates physics, AI, networking and state-machines in order to create a fully functional game engine.
 
 
             </p>
