--- a/pages/gol.html
+++ b/pages/gol.html
@@ -33,7 +33,9 @@
 
             <br />
             <p>Source Code/Build: </p>
-            <a href="../files/game_of_life.zip" download> game_of_life.zip</a>
+            <a href="../files/game_of_life.zip" download> game_of_life.zip</a> <br />
+            <a href="https://github.com/johnnileus/8501-Game-of-Life"> github repository</a>
+
 
         </div>
 
