completed text for graphics page

--- a/pages/gol.html
+++ b/pages/gol.html
@@ -27,8 +27,7 @@
                 The main challenge was analysing each step of the simulation for certain static and dynamic
                 patterns and keeping track of these across multiple steps.
             </p><br /><p>
-                The program is complete with a user-interface, a saving and loading system
-                and a grid that can be resized at runtime.
+                The program is complete with a user-interface and a saving and loading system
             </p>
 
             <br />
