--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -20,10 +20,26 @@
             <h2>Advanced Graphics for Games</h2>
             <br>
             <p>
-                This four week long module introduced OpenGL and the rendering pipeline, with the last two weeks dedicated to creating a graphical scene.
-                The task was to create a scene that demonstrated the use of shaders, lighting, textures and models from scratch. 
-
-
+                This four-week long coursework project focused on advanced graphics programming techniques.
+                It was structured into two halves with the first introducing these features through documented tutorials,
+                and the second beginning the development of the project and integrating these features into one unified rendering system.<br /><br />
+                Throughout the project, I implemented the following key features: <br />
+                - <b>Post-processing</b>, creating fog using depth textures<br />
+                - <b>Cube-mapping</b>, for improved reflections<br />
+                - <b>Texture blending</b>: Terrain texture was based on normal<br />
+                - <b>Shaders</b>: Implemented a custom water shader<br />
+                - <b>Procedural Terrain generation</b><br />
+                - <b>Transparency</b><br />
+                - <b>Shadow Mapping</b><br />
+                - <b>Real-time lighting</b><br />
+                - <b>Skeletal animations</b><br /><br /><br />
+                <p align="center">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Af6t7l-y46A?si=wS9TUs_DmjAth_vy"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin"
+                        allowfullscreen></iframe></p>
 
             </p>
 
