added images and gifs to graphics page

--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -51,8 +51,10 @@
         </div>
 
         <div class="screenshot-column">
-            <img src="../images/graphics.png" alt="Screenshot">
-            
+            <img src="../gifs/graphicswater.gif" alt="Screenshot">
+            <img src="../images/graphicsfog.png" alt="Screenshot">
+            <img src="../gifs/graphicsterrain.gif" alt="Screenshot">
+            <img src="../gifs/graphicsshadows.gif" alt="Screenshot">
 
 
         </div>
