added physics page text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a class="game" href="pages/physics.html">
                     <img src="images/physics.png">
                     <p>C++ & OpenGL</p>
-                    <h1>Small Feline, Big Deadline</h1>
+                    <h1>Little Feline, Big Deadline</h1>
                     <p>Engine programming, including physics, AI, networking and state-machines</p>
                 </a>
 
@@ -58,12 +58,12 @@
                     <p>Developed an algorithm to generate a target image out of polygons.</p>
                 </a>
 
-                <a class="game" href="pages/website.html">
+                <!--<a class="game" href="pages/website.html">
                     <img src="images/website.png">
                     <p>Python Flask + HTML/CSS</p>
                     <h1>Group-project Webpage</h1>
                     <p>Worked within a team of five to create a website for sustainable food practises.</p>
-                </a>
+                </a>-->
 
             </div>
             <h1>Personal Projects</h1>
@@ -88,7 +88,7 @@
                     <img src="images/uno.png">
 
                     <p>Python</p>
-                    <h1>Networked UNO Game </h1>
+                    <h1>Networked UNO Clone </h1>
                     <p>Created a four player uno game able to be
                     played across a network using pygame and sockets</p>
                 </a>
