--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -24,15 +24,15 @@
                 It was structured into two halves with the first introducing these features through documented tutorials,
                 and the second beginning the development of the project and integrating these features into one unified rendering system.<br /><br />
                 Throughout the project, I implemented the following key features: <br />
-                - <b>Post-processing</b>, creating fog using depth textures<br />
-                - <b>Cube-mapping</b>, for improved reflections<br />
-                - <b>Texture blending</b>: Terrain texture was based on normal<br />
-                - <b>Shaders</b>: Implemented a custom water shader<br />
-                - <b>Procedural Terrain generation</b><br />
-                - <b>Transparency</b><br />
-                - <b>Shadow Mapping</b><br />
-                - <b>Real-time lighting</b><br />
-                - <b>Skeletal animations</b><br /><br /><br />
+                • <b>Post-processing</b>, creating fog using depth textures<br />
+                • <b>Cube-mapping</b>, for improved reflections<br />
+                • <b>Texture blending</b>: Terrain texture was based on normal<br />
+                • <b>Shaders</b>: Implemented a custom water shader<br />
+                • <b>Procedural Terrain generation</b><br />
+                • <b>Transparency</b><br />
+                • <b>Shadow Mapping</b><br />
+                • <b>Real-time lighting</b><br />
+                • <b>Skeletal animations</b><br /><br /><br />
                 <p align="center">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Af6t7l-y46A?si=wS9TUs_DmjAth_vy"
                         title="YouTube video player"
