completed physics page

--- a/pages/physics.html
+++ b/pages/physics.html
@@ -51,7 +51,7 @@
             </p>
             <br />
             <p>Source Code/Build: </p>
-            <a href="../files/game_of_life.zip" download>wa </a> <br />
+            <a href="../files/csc8503build.zip" download>csc8503build.zip </a> <br />
             <a href="https://github.com/johnnileus/CSC8503"> github repository</a>
 
 
@@ -59,6 +59,9 @@
 
         <div class="screenshot-column">
             <img src="../images/physics.png" alt="Screenshot">
+            <img src="../gifs/physics3.gif" alt="Screenshot">
+            <img src="../gifs/physics2.gif" alt="Screenshot">
+            <img src="../gifs/physics1.gif" alt="Screenshot">
 
 
 
