completed dungeon page, added a bit to snapshot page

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
                     <p>Engine programming, including physics, AI, networking and state-machines</p>
                 </a>
 
-                <a class="game" href="pages/darwin.html">
+                <a class="game todo" href="pages/darwin.html">
                     <img src="images/darwin.png">
                     <p>Python</p>
                     <h1>Evolutionary Algorithm</h1>
                     <p>Developed an algorithm to generate a target image out of polygons.</p>
                 </a>
 
-                <!--<a class="game" href="pages/website.html">
+                <a class="game todo" href="pages/website.html">
                     <img src="images/website.png">
                     <p>Python Flask + HTML/CSS</p>
                     <h1>Group-project Webpage</h1>
                     <p>Worked within a team of five to create a website for sustainable food practises.</p>
-                </a>-->
+                </a>
 
             </div>
             <h1>Personal Projects</h1>
@@ -76,7 +76,7 @@
                     <p>Procedural Dungeons and Inventory System</p>
                 </a>
 
-                <a class="game" href="pages/snapshot.html">
+                <a class="game todo" href="pages/snapshot.html">
                     <img src="images/snapshot.png">
 
                     <p>Godot</p>
@@ -84,7 +84,7 @@
                     <p>3-person personal team project for a game jam.</p>
                 </a>
 
-                <a class="game" href="pages/uno.html">
+                <a class="game todo" href="pages/uno.html">
                     <img src="images/uno.png">
 
                     <p>Python</p>
