--- a/pages/snapshot.html
+++ b/pages/snapshot.html
@@ -21,6 +21,8 @@
             <p>
                 This game was made in a team of three people for the
                 <a href="https://itch.io/jam/game-dev-winter-jam-25"> NUGDS Winter Jam 2025 </a>
+                <br>
+                The itch.io page can be found  <a href="https://dani-gvid.itch.io/snapshot">here</a> with a working build of the game
             </p>
 
 
