--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -45,7 +45,7 @@
 
             <br />
             <p>Source Code/Build: </p>
-            <a href="../files/game_of_life.zip" download> game_of_life.zip</a> <br />
+            <a href="../files/CSC8502build.zip" download> CSC8502build.zip</a> <br />
             <a href="https://github.com/johnnileus/CSC8502"> github repository</a>
 
         </div>
