changed zip file name

--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -44,8 +44,8 @@
             </p>
 
             <br />
-            <p>Source Code/Build: </p>
-            <a href="../files/CSC8502build.zip" download> CSC8502build.zip</a> <br />
+            <p>Source Code: </p>
+            <a href="../files/CSC8502source.zip" download> CSC8502source.zip</a> <br />
             <a href="https://github.com/johnnileus/CSC8502"> github repository</a>
 
         </div>
