--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
                 <a class="game todo" href="pages/website.html">
                     <img src="images/website.png">
-                    <p>Python Flask + HTML/CSS</p>
-                    <h1>Group-project Webpage</h1>
-                    <p>Worked within a team of five to create a website for sustainable food practises.</p>
+                    <p>C++ & OpenGL</p>
+                    <h1>Group-project Game</h1>
+                    <p>Worked with a team of 8 to create a video-game</p>
                 </a>
 
             </div>
