created team project page

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <p>Developed an algorithm to generate a target image out of polygons.</p>
                 </a>
 
-                <a class="game todo" href="pages/website.html">
-                    <img src="images/website.png">
+                <a class="game" href="pages/teamproject.html">
+                    <img src="images/teamproject.png">
                     <p>C++ & OpenGL</p>
                     <h1>Group-project Game</h1>
                     <p>Worked with a team of 8 to create a video-game</p>
