--- a/pages/diss.html
+++ b/pages/diss.html
@@ -37,9 +37,8 @@
                 and evaluating algorithms effectively.
             </p>
             <br>
-            <a href="../documents/diss_write_up.pdf" download>diss_write_up.pdf</a>
-            <br />
-            <a href="https://github.com/johnnileus/CSC3094-Dissertation">github repository</a>
+            <p><a href="../documents/diss_write_up.pdf" download>diss_write_up.pdf</a> <- Dissertation write-up</p>
+            <p><a href="https://github.com/johnnileus/CSC3094-Dissertation">github repository</a> <- Repository</p>
 
 
 
