--- a/pages/dungeon.html
+++ b/pages/dungeon.html
@@ -69,6 +69,7 @@
 
             </p>
 
+            <p><a href="https://github.com/johnnileus/GameAttempt-1"> github repository</a> <- Repository</p>
 
 
         </div>
