--- a/pages/gol.html
+++ b/pages/gol.html
@@ -31,9 +31,9 @@
             </p>
 
             <br />
-            <p>Source Code/Build: </p>
-            <a href="../files/game_of_life.zip" download> game_of_life.zip</a> <br />
-            <a href="https://github.com/johnnileus/8501-Game-of-Life"> github repository</a>
+
+            <p><a href="../files/game_of_life.zip" download> game_of_life.zip</a> <- Build + Source Code</p>
+            <p><a href="https://github.com/johnnileus/8501-Game-of-Life"> github repository</a> <- Repository</p>
 
 
         </div>
