--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -44,9 +44,9 @@
             </p>
 
             <br />
-            <p>Source Code/Build: </p>
-            <a href="../files/game_of_life.zip" download> game_of_life.zip</a> <br />
-            <a href="https://github.com/johnnileus/CSC8502"> github repository</a>
+            <p>Source Code: </p>
+            <!--<p><a href="../files/csc8503build.zip" download> csc8503build.zip</a> <- Build </p>-->
+            <p><a href="https://github.com/johnnileus/CSC8502"> github repository</a> <- Repository </p>
 
         </div>
 
