--- a/pages/ugdiss.html
+++ b/pages/ugdiss.html
@@ -37,8 +37,8 @@
                 and evaluating algorithms effectively.
             </p>
             <br>
-            <p><a href="../documents/diss_write_up.pdf" download>diss_write_up.pdf</a> <- Dissertation write-up</p>
-            <p><a href="https://github.com/johnnileus/CSC3094-Dissertation">github repository</a> <- Repository</p>
+            <p><a href="../documents/CSC3094_Gvidas_Danielius.pdf" download>CSC3094_Gvidas_Danielius.pdf</a> <- Dissertation write-up</p>
+            <p><a href="https://github.com/johnnileus/CSC3094-Dissertation">CSC3094-Dissertation</a> <- Repository</p>
 
 
 
